--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-numpy==1.21.2
-matplotlib==3.4.3
-pandas==1.3.3
-plotly==5.3.1
-scikit_learn==1.0
-xgboost==1.4.2
+numpy==1.19.5
 keras==2.6.0
 tensorflow==2.6.0
+dash==2.0.0
+dash_bootstrap_components==1.0.0
+matplotlib==3.4.3
+pandas==1.3.4
+plotly==5.3.1
+scikit_learn==1.0.1
+xgboost==1.5.0
