--- a/dataset_config.json
+++ b/dataset_config.json
@@ -174,21 +174,21 @@
       "pred_type": "classification",
       "target": "y",
       "dtype": {
-			"age"      :    "int64",
+			"age"      :    "float64",
 			"job"      :    "category",
 			"marital"  :    "category",
 			"education":    "category",
 			"default"  :    "category",
-			"balance"  :    "int64",
+			"balance"  :    "float64",
 			"housing"  :    "category",
 			"loan"     :    "category",
 			"contact"  :    "category",
-			"day"      :    "int64",
+			"day"      :    "float64",
 			"month"    :    "category",
-			"duration" :    "int64",
-			"campaign" :    "int64",
-			"pdays"    :    "int64",
-			"previous" :    "int64",
+			"duration" :    "float64",
+			"campaign" :    "float64",
+			"pdays"    :    "float64",
+			"previous" :    "float64",
 			"poutcome" :    "category",
 			"y"        :   "category"
 		}
